--- a/JavaBackFront/Java-Web-FrontEnd/src/index.css
+++ b/JavaBackFront/Java-Web-FrontEnd/src/index.css
@@ -5,6 +5,13 @@ body {
   margin: 0;
   padding: 0;
   align-content: center;
+  font-size: 1rem;
+}
+#root{
+
+width: 100vw;
+height: 100vh;
+
 }
 
 
