--- a/JavaBackFront/Java-Web-FrontEnd/src/views/Profile/profile.css
+++ b/JavaBackFront/Java-Web-FrontEnd/src/views/Profile/profile.css
@@ -12,6 +12,7 @@
 #form-change-profile {
     display: grid;
     grid-template-rows: repeat(8, 1fr);
+    row-gap: 0.5vh;
     width: 15vw;
     height: 50vh;
     margin: 0 auto;
