--- a/JavaBackFront/Java-Web-FrontEnd/src/views/Admin/admin.css
+++ b/JavaBackFront/Java-Web-FrontEnd/src/views/Admin/admin.css
@@ -13,7 +13,7 @@
 
 #addProduct input {
     border-radius: var(--borderRadiusInputForm);
-    height: var(--heightInputForm);
+    width: 20vw;
     background: var(--backGroungColorPlaceHolder);
     backdrop-filter: blur(10px);
     outline: none;
@@ -25,7 +25,7 @@
 #addProduct button{
 
     border-radius: var(--borderRadiusInputForm);
-    height: var(--heightInputForm);
+    width: 20vw;
     background: var(--backGroungColorPlaceHolder);
     backdrop-filter: blur(10px);
     outline: none;
@@ -40,7 +40,7 @@
 #addProduct Select{
 
     border-radius: var(--borderRadiusInputForm);
-    height: var(--heightInputForm);
+    width: 20vw;
     background: var(--backGroungColorPlaceHolder);
     backdrop-filter: blur(10px);
     outline: none;
