--- a/JavaBackFront/Java-Web-FrontEnd/src/index.css
+++ b/JavaBackFront/Java-Web-FrontEnd/src/index.css
@@ -5,10 +5,10 @@
   --heightInputForm: 3vh;
 
   --borderColorGeneralElement: rgba(255, 255, 255, 0.25);
-  --borderSizeGeneralElement:0.2vh;
+  --borderSizeGeneralElement: 0.2vh;
   --borderStyleGeneralElement: solid;
-  --backGroundColorGeneralElement:rgba(255, 255, 255, 0.3);
-  --borderRadiusGeneralElement:2vh;
+  --backGroundColorGeneralElement: rgba(255, 255, 255, 0.3);
+  --borderRadiusGeneralElement: 2vh;
 
 
 }
@@ -22,15 +22,17 @@ body {
   margin: 0;
   padding: 0;
   align-content: center;
-  font-size: 1rem;
+  font-size: 1vh;
   background-color: rgb(163, 160, 160);
 }
 
 #root {
 
+  display: grid;
+  grid-template-rows: 8vh 89vh;
+  row-gap: 1.5vh;
   width: 100vw;
   height: 100vh;
-
 }
 
 header {
@@ -38,15 +40,12 @@ header {
   display: grid;
   grid-template-columns: 0.5fr 1fr 0.5fr;
   column-gap: 0.2vw;
-  height: calc(9vh - 1px);
   width: 90vw;
   margin: 0 auto;
-
-
   background-color: var(--backGroundColorGeneralElement);
   border-radius: 0vh 0vh var(--borderRadiusGeneralElement) var(--borderRadiusGeneralElement);
   backdrop-filter: blur(10px);
-  border:var(--borderSizeGeneralElement)  var(--borderStyleGeneralElement) var(--borderColorGeneralElement);
+  border: var(--borderSizeGeneralElement) var(--borderStyleGeneralElement) var(--borderColorGeneralElement);
 
 }
 
@@ -54,9 +53,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-around;
-
-
-  font-size: 1rem;
+  font-size: 1.5vh;
   font-weight: 700;
   text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
 
@@ -65,13 +62,11 @@ header {
 .header-menu a {
   text-decoration: none;
   color: rgb(64, 64, 64);
-
-
 }
 
 .header-logo {
 
-  font-size: 2rem;
+  font-size: 3vh;
   font-weight: 700;
   text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
   text-align: center;
@@ -83,7 +78,7 @@ header {
 .user-info {
   display: flex;
   align-items: center;
-  font-size: 1rem;
+  font-size: 1vh;
   border-left: 1px solid rgba(255, 255, 255, 0.2);
   border-right: 1px solid rgba(255, 255, 255, 0.2);
 }
@@ -91,7 +86,7 @@ header {
 .user-name {
 
   color: rgb(64, 64, 64);
-  font-size: 1rem;
+  font-size: 1.5vh;
   font-weight: 700;
   text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
   margin-left: 0.2vw;
@@ -107,12 +102,6 @@ header {
   margin: 0 auto;
 
 }
-
-
-
-
-
-
 
 
 .boxShadow {
