--- a/JavaBackFront/Java-Web-FrontEnd/src/index.css
+++ b/JavaBackFront/Java-Web-FrontEnd/src/index.css
@@ -78,6 +78,7 @@ header {
 .user-info {
   display: flex;
   align-items: center;
+  justify-content: space-around;
   font-size: 1vh;
   border-left: 1px solid rgba(255, 255, 255, 0.2);
   border-right: 1px solid rgba(255, 255, 255, 0.2);
